<resources>
    <string name="app_name">TextNinja</string>
    <string name="upload_doc">Upload Doc</string>
    <string name="enter_url">Enter your URL</string>
    <string name="fetch_doc">Fetch Doc</string>
    <string name="app_description">Upload a document or provide a link to the document</string>
    <string name="or">OR</string>

    <string name="title_activity_document_view">DocumentView</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="find_similar_paragraphs">Find Similar Paragraphs</string>
    <string name="enter_valid_path">Please enter a valid path</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="cannot_go_back">Cannot go back</string>
    <string name="select_paras">Please select a paragraph</string>
    <string name="invalid_paras_selected">Invalid Paras selected</string>
    <string name="file_failed_to_fetch">File failed to fetch</string>
</resources>
